# lena_python3_project

./: README.md  pyproject.toml
lena/: iodata.py  test_iodata.py
tests/: test_cp.npz
